--- a/pom.xml
+++ b/pom.xml
@@ -32,8 +32,8 @@
 	</pluginRepositories>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>1.6</maven.compiler.source>
-		<maven.compiler.target>1.6</maven.compiler.target>
+		<maven.compiler.source>1.7</maven.compiler.source>
+		<maven.compiler.target>1.7</maven.compiler.target>
 	</properties>
 	<dependencies>
 <!--
@@ -76,10 +76,11 @@ jboss-eap-*-maven-repository/org/jboss/spec/jboss-javaee-6.0
 				<plugins>
 					<plugin>
 						<artifactId>maven-war-plugin</artifactId>
-						<version>2.1.1</version>
+						<version>2.4</version>
 						<configuration>
 							<outputDirectory>deployments</outputDirectory>
 							<warName>ROOT</warName>
+							<failOnMissingWebXml>false</failOnMissingWebXml>
 						</configuration>
 					</plugin>
 				</plugins>
