--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,7 @@
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-multipart-provider</artifactId>
 			<version>2.3.7.Final</version>
+			<scope>provided</scope>
 			<exclusions>
 				<exclusion>
 					<artifactId>resteasy-jaxrs</artifactId>
